# CondaExcercise

./: bld.bat  build.sh  meta.yaml
src/: CMakeLists.txt  main.cpp
